...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdb-JN-kEu">
                                        <rect key="frame" x="360" y="10" width="44" height="44"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="44" id="OuB-GR-UFE"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="Share">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="shareButtonTapped:" destination="r3d-KN-wgs" eventType="touchUpInside" id="y18-si-EPT"/>
                                        </connections>
                                    </button>
...
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="76B-LB-ADo" userLabel="loadingView">
                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CV0-Tm-cID">
                                        <rect key="frame" x="152" y="376" width="110" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Cancel Page Load"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="110" id="Oj7-dg-auf"/>
                                            <constraint firstAttribute="height" constant="30" id="dyC-E8-JKi"/>
                                        </constraints>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="didTapCancelButton:" destination="r3d-KN-wgs" eventType="touchUpInside" id="87X-FH-qxh"/>
                                        </connections>
                                    </button>
                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="vx1-vv-2Wx">
                                        <rect key="frame" x="197" y="348" width="20" height="20"/>
...
