...
        let searchIcon = UIImageView(frame: CGRect(x: 0, y: 0, width: 44, height: 44))
        searchIcon.image = UIImage(named: "apd_toolbar_search")?.imageWithRenderingMode(.AlwaysTemplate)
        searchIcon.tintColor = Colors.lightGray
        searchIcon.contentMode = .Center
        textField.leftView = searchIcon
        textField.leftViewMode = .Always
        textField.placeholder = "Search all Newspapers"
        textField.font = Fonts.largeBody
        textField.autocapitalizationType = .None
        textField.clearButtonMode = .WhileEditing
        textField.autocorrectionType = .No
        textField.returnKeyType = .Search
        textField.tintColor = Colors.lightBlueBright
...
