...
        switch indexPath.section {
        case Section.Search.rawValue:
            let cell = collectionView.dequeueReusableCellWithReuseIdentifier("SearchCell", forIndexPath: indexPath) as! SearchFieldCell
            let fallbackText = "this newspaper"
            cell.searchField.placeholder = "Search \(newspaper?.title ?? fallbackText)"
            cell.searchField.shouldBeginEditingHandler = { [weak self] in
                let sb = UIStoryboard(name: "Search", bundle: nil)
                if let nvc = sb.instantiateInitialViewController() as? UINavigationController,
                    let vc = nvc.topViewController as? SearchViewController {
                        vc.filters = SearchFilters()
                        if let city = self?.newspaper?.city {
                            vc.filters?.cities = [city]
                        }
...
