...
        scrollView.addSubview(pageView)

        doneButton.setBackgroundImage(nil, forState: .Normal)
        doneButton.setTitleColor(UIColor.lightTextColor(), forState: .Normal)
        doneButton.setTitle(nil, forState: .Normal)
        doneButton.tintColor = UIColor.whiteColor()
        let doneImage = UIImage(named: "UIAccessoryButtonX")
        doneButton.setImage(doneImage?.imageWithRenderingMode(.AlwaysTemplate), forState: .Normal)

        shareButton.setBackgroundImage(nil, forState: .Normal)
        shareButton.setTitleColor(UIColor.lightTextColor(), forState: .Normal)
        shareButton.setTitle(nil, forState: .Normal)
        shareButton.tintColor = UIColor.whiteColor()
...
